force-app/main/default/objects/Client_Credential__c/Client_Credential__c.object-meta.xml
<CustomObject>
    <description>Created by JW
Business Unit: Salesforce Consulting
Stores the credential information to clients&apos; Salesforce instances.</description>
    <label>Client Credential</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>