force-app/main/default/objects/Client_Credential__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by JW</description>
    <inlineHelpText>What client are these login credentials for?</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Credentials</relationshipLabel>
    <relationshipName>Client_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>