force-app/main/default/objects/Client_Credential__c/fields/Login_Email_Username__c.field-meta.xml
<CustomField>
    <fullName>Login_Email_Username__c</fullName>
    <description>Created by JW
Stores the username of this login.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Login Email/Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>