force-app/main/default/objects/Client_Credential__c/fields/Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Login_URL__c</fullName>
    <description>Created by JW</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Where to log in to this org.</inlineHelpText>
    <label>Login URL</label>
    <type>Url</type>
</CustomField>