force-app/main/default/objects/Client_Credential__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Created by JW</description>
    <inlineHelpText>This is an encrypted field, viewable only by Admins.</inlineHelpText>
    <label>Password</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>