force-app/main/default/objects/Client_Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Platform__c</columns>
    <columns>Login_URL__c</columns>
    <columns>Login_Email_Username__c</columns>
    <columns>Password__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>